--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "date-fns": "^3.3.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
