--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "date-fns": "^3.3.1",
     "uuid": "^9.0.1",
     "file-saver": "^2.0.5",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
