enable firebase deployment for all branches & non-main in preview mode

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Or your deploy branch
+      - '**'  # Or your deploy branch
 
 jobs:
   build_and_deploy:
@@ -37,5 +37,5 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
-          channelId: live
+          channelId: ${{ github.ref_name == 'main' && 'live' || github.ref_name }}
           projectId: camp-qr-checkin
